--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://1e4e8490-8385-4c1b-8469-5e305fb70ad8.preview.emergentagent.com
 WDS_SOCKET_PORT=443
